@@ -21,6 +21,13 @@
 
 2005-06-06  Maciej Stachowiak  <mjs@apple.com>
 
+        - updated
+
+        * WebKitSystemInterface.h:
+        * libWebKitSystemInterface.a:
+
+2005-06-06  Maciej Stachowiak  <mjs@apple.com>
+
 	- updated
 
         * WebKitSystemInterface.h:
